Ripped out Gravatar profiles in favor of our own photo uploads, with Gravatar and Wizard portrait fallbacks.

--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -8,10 +8,6 @@
       margin: 2px
       i
         margin-right: 5px
-
-  
-  img.img-thumbnail
-    margin: 5px 20px 20px 20px
     
   .approved, .not-approved
     display: none
@@ -26,6 +22,13 @@
       border: 0
       border-radius: 0
       padding: 10px
+
+    .public-profile-container
+      padding: 20px
+
+      img.profile-photo
+        width: 256px
+        border-radius: 6px
 
     .job-profile-container
       width: 100%
@@ -112,6 +115,7 @@
             margin-top: 10px
             img
               max-width: 524px - 60px
+              max-height: 200px
 
           .header-icon
             margin-right: 10px
