--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -11,12 +11,8 @@
   #save-button
     float: right
 
-  .thumbnails
-    text-align: center
-    .thumbnail
-      margin-bottom: 30px
-      margin-right: 20px
-      float: left
+  .gravatar-fallback
+    margin-top: 10px
       
   input.range
     position: relative
