--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -54,11 +54,10 @@ block content
           tr(data-candidate-id=candidate.id)
             td
               if authorized
-                // Want image, but it doesn't work without loading every Gravatar profile
-                //img(src=candidate.getPhotoURL(), alt=profile.name, title=profile.name, width=50)
+                img(src=candidate.getPhotoURL(50), alt=profile.name, title=profile.name, width=50)
                 p= profile.name
               else
-                //img(src="/images/pages/contribute/archmage.png", alt="", title="Sign up as an employer to see our candidates", width=50)
+                img(src="/images/pages/contribute/archmage.png", alt="", title="Sign up as an employer to see our candidates", width=50)
                 p Developer ##{index + 1}
             if profile.country == 'USA'
               td= profile.city
