Fixing some recruitment profile bugs.

--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -37,3 +37,11 @@
 
   #job-profile-treema
     background-color: white
+
+    input
+      width: 790px
+      
+    .treema-description
+      font-size: 14px
+      line-height: 22px
+      opacity: 1
