Added text diff library to delta view.

--- a/app/styles/editor/delta.sass
+++ b/app/styles/editor/delta.sass
@@ -25,6 +25,8 @@
       color: blue
     .panel-heading
       background-color: lighten(blue, 45%)
+    table
+      width: 100%
 
   .delta-deleted
     border-color: red
