Added delta views to the other save modals. Fixed modified deltas in delta views. A few style tweaks.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -111,6 +111,9 @@ a[data-toggle="modal"]
     @include box-shadow(0 0 0 #000)
     //position: absolute
     width: 99%
+    
+  .background-wrapper.plain
+    background: white
 
   .modal-content
     @include box-shadow(none)
