--- a/app/styles/editor/delta.sass
+++ b/app/styles/editor/delta.sass
@@ -34,3 +34,10 @@
       color: red
     .panel-heading
       background-color: lighten(red, 42%)
+
+  .delta-moved-index
+    border-color: darkslategray
+    strong
+      color: darkslategray
+    .panel-heading
+      background-color: lighten(darkslategray, 60%)
