--- a/app/templates/editor/delta.jade
+++ b/app/templates/editor/delta.jade
@@ -30,4 +30,7 @@
           if delta.action === 'text-diff'
             .col-md-12
               div.text-diff
+          if delta.action === 'moved-index'
+            .col-md-12
+              span Moved array value #{JSON.stringify(delta.left)} to index #{delta.destinationIndex}
     - i += 1
