Added some autocompleters for job profile Treema. Projects are now entirely links.

--- a/app/styles/account/settings.sass
+++ b/app/styles/account/settings.sass
@@ -8,8 +8,17 @@
     background: #eee
     border-radius: 5px
 
-  #save-button
-    float: right
+  #save-button-container
+    position: fixed
+    top: 100px
+    width: 1000px
+    z-index: 10
+
+    #save-button
+      float: right
+    
+      &.btn-info, &.btn-danger
+        opacity: 1.0
 
   .gravatar-fallback
     margin-top: 10px
