--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -117,6 +117,9 @@
               max-width: 524px - 60px
               max-height: 200px
 
+          .experience-header
+            margin-top: 25px
+
           .header-icon
             margin-right: 10px
             width: 32px
@@ -139,6 +142,23 @@
               margin-bottom: 10px
               padding: 5px 5px
               border: 2px solid rgb(220, 220, 220)
+              transition: .5s ease-in-out
+              position: relative
+
+              &:hover
+                border-color: rgb(100, 130, 255)
+
+              a
+                position: relative
+                z-index: 2
+
+              > a
+                position: absolute
+                width: 100%
+                height: 100%
+                top: 0
+                left: 0
+                z-index: 1
         
               .project-image
                 width: 230px
