--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -8,7 +8,8 @@ block content
     p(data-i18n="account_settings.not_logged_in") Log in or create an account to change your settings.
 
   else
-    button.btn#save-button.disabled.secret(data-i18n="account_settings.autosave") Changes Save Automatically
+    #save-button-container
+      button.btn#save-button.disabled.secret(data-i18n="account_settings.autosave") Changes Save Automatically
   
     ul.nav.nav-pills#settings-tabs
       li
