Extended the save version modal to allow submitting patches.

--- a/app/styles/modal/save_version.sass
+++ b/app/styles/modal/save_version.sass
@@ -1,6 +1,11 @@
 #save-version-modal
   .modal-body
     padding: 10px 50px 30px 20px
+   
+  .modal-footer
+    text-align: left
+    .buttons
+      text-align: right
   
   #cla-link
     cursor: pointer
