--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -7,6 +7,10 @@
       cursor: pointer
       &:hover
         color: black
+
+      &:first-child
+        // Make sure that "Developer #56" doesn't wrap onto second row
+        min-width: 110px
       
     .tablesorter-headerAsc
       background-color: #cfc
@@ -16,3 +20,10 @@
 
     tr
       cursor: pointer
+
+    code
+      background-color: rgb(220, 220, 220)
+      color: #555
+      margin: 2px 0
+      display: inline-block
+      text-transform: lowercase
