--- a/app/templates/account/job_profile.jade
+++ b/app/templates/account/job_profile.jade
@@ -1,8 +1,8 @@
 h3(data-i18n="account_settings.job_profile") Job Profile
 
 if me.get('jobProfileApproved')
-  p.lead(data-i18n="account_settings.job_profile_approved") Your job profile has been approved by CodeCombat. Hungry employers will see it until you mark it inactive or it is stale for two months.
+  p.lead(data-i18n="account_settings.job_profile_approved") Your job profile has been approved by CodeCombat. Employers will be able to see it until you either mark it inactive or it has not been changed for four weeks.
 else
-  p.lead(data-i18n="account_settings.job_profile_explanation") Hi! Fill this out, and if we think we can find you a software developer job, we will get in touch to approve your profile.
+  p.lead(data-i18n="account_settings.job_profile_explanation") Hi! Fill this out, and we will get in touch about finding you a software developer job.
 
 #job-profile-treema
