--- a/app/templates/modal/signup.jade
+++ b/app/templates/modal/signup.jade
@@ -34,8 +34,7 @@ block modal-footer
   .modal-footer
     div
       button.btn.btn-primary.btn-large#signup-button(data-i18n="signup.sign_up") Sign Up
-    div.social-login-text.
-      Or you can login directly through Facebook or G+
+    div.social-login-text(data-i18n="signup.social_signup") Or, you can sign up through Facebook or G+:
 
   .modal-footer.network-logins
     div
