--- a/app/templates/editor/thang/edit.jade
+++ b/app/templates/editor/thang/edit.jade
@@ -27,6 +27,8 @@ block content
       a(href="#editor-thang-spritesheets-view", data-toggle="tab") Spritesheets
     li
       a(href="#editor-thang-colors-tab-view", data-toggle="tab")#color-tab Colors
+    li
+      a(href="#editor-thang-patches-view", data-toggle="tab")#patches-tab Patches
 
   div.tab-content
     div.tab-pane#editor-thang-colors-tab-view
@@ -83,6 +85,10 @@ block content
     div.tab-pane#editor-thang-spritesheets-view
       
       div#spritesheets
+  
+    div.tab-pane#editor-thang-patches-view
+  
+      div.patches-view
 
   div#error-view
 
