--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -241,3 +241,10 @@ body[lang='ru'], body[lang|='zh'], body[lang='ja'], body[lang='pl'], body[lang='
     margin-bottom: 20px
   .partner-badges
     display: none
+
+// point the new glyphicons to the fonts in public
+  
+@font-face
+  font-family: 'Glyphicons Halflings'
+  src: url("/fonts/glyphicons-halflings-regular.eot")
+  src: url("/fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("/fonts/glyphicons-halflings-regular.woff") format("woff"), url("/fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular") format("svg")
