--- a/app/styles/play/level.sass
+++ b/app/styles/play/level.sass
@@ -1,6 +1,9 @@
 @import "app/styles/bootstrap/mixins"
 @import "app/styles/mixins"
 
+body.is-playing
+  background-color: black
+
 #level-view
   margin: 0 auto
   @include user-select(none)
