--- a/app/styles/play/level/loading.sass
+++ b/app/styles/play/level/loading.sass
@@ -1,16 +1,9 @@
 @import "app/styles/bootstrap/mixins"
 @import "app/styles/mixins"
 
-@mixin sky-background($url: '', $backgroundPosition: left)
-  $top: #95D9EF
-  $mid: #FFFFFF
-  $bot: #8EC643
-  $stop: 99.6%
-  background: $mid
-  background-image: url($url)  // fallback
-  background-image: url($url), -webkit-linear-gradient(top, $top, $mid $stop, $bot)
-  background-image: url($url),     -ms-linear-gradient(top, $top, $mid $stop, $bot)
-  background-image: url($url),         linear-gradient(to bottom, $top, $mid $stop, $bot)
+@mixin wing-background($url: '', $backgroundPosition: left)
+  background: black
+  background-image: url($url)
   background-repeat: no-repeat
   background-position: top $backgroundPosition
   background-size: contain
@@ -69,11 +62,11 @@
     position: absolute
 
   .left-wing
-    @include sky-background('/images/level/loading_left_wing.png', right)
+    @include wing-background('/images/level/loading_left_wing.png', right)
     left: -50%
     transition: all $UNVEIL_TIME ease
 
   .right-wing
-    @include sky-background('/images/level/loading_right_wing.png', left)
+    @include wing-background('/images/level/loading_right_wing.png', left)
     right: -50%
     transition: all $UNVEIL_TIME ease
