--- a/app/styles/modal/save_version.sass
+++ b/app/styles/modal/save_version.sass
@@ -33,7 +33,7 @@
     font-size: 0.9em
     font-style: italic
 
-  .delta-list-view
+  .delta-view
     overflow-y: auto
     padding: 10px
     border: 1px solid black
