--- a/app/templates/editor/patch_modal.jade
+++ b/app/templates/editor/patch_modal.jade
@@ -12,9 +12,12 @@ block modal-body-content
 block modal-footer
   .modal-footer
     button(data-dismiss="modal", data-i18n="common.cancel").btn Cancel
-    if canReject
-      button.btn.btn-danger Reject
-    if canWithdraw
-      button.btn.btn-danger Withdraw
-    if canAccept
-      button.btn.btn-primary Accept
+    if isPatchCreator
+      if status != 'withdrawn'
+        button.btn.btn-danger#withdraw-button Withdraw
+    if isPatchRecipient
+      if status != 'accepted'
+        button.btn.btn-primary#accept-button Accept
+      if status != 'rejected'
+        button.btn.btn-danger#reject-button Reject
+                               
