--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -26,11 +26,16 @@ block outer_content
               a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
             li
               a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
-            
-            
+            li
+              a(href="#editor-level-patches", data-toggle="tab", data-i18n="resources.patches")#patches-tab Patches
+
+
           ul.nav.navbar-nav.navbar-right
             li(data-toggle="coco-modal", data-target="modal/revert", data-i18n="editor.revert", disabled=authorized === true ? undefined : "true").btn.btn-primary.navbar-btn#revert-button Revert
-            li(data-i18n="common.save", disabled=authorized === true ? undefined : "true").btn.btn-primary.navbar-btn#commit-level-start-button Save
+            if authorized
+              li(data-i18n="common.save").btn.btn-primary.navbar-btn#commit-level-start-button Save
+            else
+              li(data-i18n="common.patch").btn.btn-primary.navbar-btn#commit-level-patch-button Patch
             li(data-i18n="common.fork", disabled=anonymous ? "true": undefined).btn.btn-primary.navbar-btn#fork-level-start-button Fork
             li(title="⌃↩ or ⌘↩: Play preview of current level", data-i18n="common.play")#play-button.btn.btn-inverse.banner.navbar-btn Play!
 
@@ -74,6 +79,9 @@ block outer_content
       div.tab-pane#editor-level-components-tab-view
 
       div.tab-pane#editor-level-systems-tab-view
+    
+      div.tab-pane#editor-level-patches
+        .patches-view
 
     div#error-view
 
