--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -61,6 +61,7 @@ block content
 
       table.table.table-bordered.table-condensed.table-hover
         tr
+          th
           th(data-i18n="general.player").name-col-cell Player
           th(data-i18n="ladder.games_simulated") Games simulated
           th(data-i18n="ladder.games_played") Games played
@@ -68,9 +69,10 @@ block content
         - var topSimulators = simulatorsLeaderboardData.topSimulators.models;
         - var showJustTop = simulatorsLeaderboardData.inTopSimulators() || me.get('anonymous');
         - if(!showJustTop) topSimulators = topSimulators.slice(0, 10);
-        for user in topSimulators
+        for user, rank in topSimulators
           - var myRow = user.id == me.id
           tr(class=myRow ? "success" : "")
+            td.simulator-leaderboard-cell= rank + 1
             td.name-col-cell= user.get('name') || "Anonymous"
             td.simulator-leaderboard-cell= user.get('simulatedBy')
             td.simulator-leaderboard-cell= user.get('simulatedFor')
@@ -78,11 +80,12 @@ block content
                 
         if !showJustTop && simulatorsLeaderboardData.nearbySimulators().length
           tr(class="active")
-            td(colspan=4).ellipsis-row ...
+            td(colspan=5).ellipsis-row ...
           for user in simulatorsLeaderboardData.nearbySimulators()
             - var myRow = user.id == me.id
             - var ratio = user.get('simulatedBy') / user.get('simulatedFor');
             tr(class=myRow ? "success" : "")
+              td.simulator-leaderboard-cell= user.rank
               td.name-col-cell= user.get('name') || "Anonymous"
               td.simulator-leaderboard-cell= user.get('simulatedBy')
               td.simulator-leaderboard-cell= user.get('simulatedFor')
