--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -13,7 +13,7 @@ block content
         button.btn.edit-settings-button#toggle-job-profile-approved
           i.icon-cog
           span(data-i18n='account_profile.approved').approved Approved
-          span(data-i18n='account_profile.approved').not-approved Not Approved
+          span(data-i18n='account_profile.not_approved').not-approved Not Approved
   
   if user.get('jobProfile')
     - var profile = user.get('jobProfile');
