--- a/app/styles/account/profile.sass
+++ b/app/styles/account/profile.sass
@@ -33,6 +33,7 @@
     .job-profile-container
       width: 100%
       height: 100%
+      min-height: 600px
       padding: 0
       display: table
       
