--- a/app/templates/account/profile.jade
+++ b/app/templates/account/profile.jade
@@ -68,7 +68,7 @@ block content
           if profile.education.length
             h3.experience-header
               img.header-icon(src="/images/pages/account/profile/education.png", alt="")
-              span(data-i18n="account_profile.work_experience") Education
+              span(data-i18n="account_profile.education") Education
             each school in profile.education
               div.duration.pull-right= school.duration
               | #{school.degree} at #{school.school}
