ModelModal and simple leaderboard pagination.

--- a/app/styles/play/ladder/ladder_tab.sass
+++ b/app/styles/play/ladder/ladder_tab.sass
@@ -4,6 +4,9 @@
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
+
+  .histogram-display
+    height: 130px
     
   .bar rect
     fill: steelblue
@@ -40,3 +43,7 @@
   .ogres-rank-text
     fill: #3f44bf
     
+  .load-more-ladder-entries
+    position: absolute
+    right: 15px
+    bottom: -5px
