--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -265,3 +265,8 @@ body[lang='ja']
   font-family: 'Glyphicons Halflings'
   src: url("/fonts/glyphicons-halflings-regular.eot")
   src: url("/fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("/fonts/glyphicons-halflings-regular.woff") format("woff"), url("/fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular") format("svg")
+
+.spr:after
+  content: " "
+.spl:before
+  content: " "
