Set up patches for components.

--- a/app/styles/editor/level/component/edit.sass
+++ b/app/styles/editor/level/component/edit.sass
@@ -1,4 +1,11 @@
 #editor-level-component-edit-view
+  nav
+    margin-bottom: 0
+    
+  #component-patches
+    padding: 0 10px 10px
+    background: white
+  
   .navbar-text
     float: left
     
