--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -20,6 +20,13 @@ nav.navbar.navbar-default(role='navigation')
         li(data-i18n="general.version_history").btn.btn-primary.navbar-btn#history-button Version History
         li(data-i18n="editor.level_component_btn_new").btn.btn-primary.navbar-btn#create-new-component-button Create New Component
         li.btn.btn-primary.navbar-btn#patch-component-button Patch
+        li#watch-component-button.btn.btn-primary.navbar-btn
+          span.watch
+            span.spr Watch
+            span.glyphicon.glyphicon-eye-open
+          span.unwatch.secret
+            span.spr Unwatch
+            span.glyphicon.glyphicon-eye-close
 
 .tab-content
   .tab-pane.active#component-code
