--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -1,32 +1,44 @@
 nav.navbar.navbar-default(role='navigation')
-  .container-fluid
-    .navbar-header
-      span.navbar-brand
-        span(data-i18n="editor.level_component_edit_title")
-          | Edit Component
-        span : 
-          | "#{editTitle}"
-    .collapse.navbar-collapse
-      ul.nav.navbar-nav.nav-tabs
-        li.active
-          a(href="#component-code" data-toggle="tab" data-i18n="general.code") Code
-        li
-          a(href="#component-config-schema" data-toggle="tab" data-i18n="editor.level_component_config_schema") Config Schema
-        li
-          a(href="#component-settings" data-toggle="tab" data-i18n="editor.level_component_settings") Settings
-        li
-          a(href="#component-patches" data-toggle="tab" data-i18n="resources.patches")#component-patches-tab Patches
-      ul.nav.navbar-nav.navbar-left
-        li(data-i18n="general.version_history").btn.btn-primary.navbar-btn#history-button Version History
-        li(data-i18n="editor.level_component_btn_new").btn.btn-primary.navbar-btn#create-new-component-button Create New Component
-        li.btn.btn-primary.navbar-btn#patch-component-button Patch
-        li#watch-component-button.btn.btn-primary.navbar-btn
-          span.watch
-            span.spr Watch
-            span.glyphicon.glyphicon-eye-open
-          span.unwatch.secret
-            span.spr Unwatch
-            span.glyphicon.glyphicon-eye-close
+  ul.nav.navbar-nav.nav-tabs
+    li.active
+      a(href="#component-code" data-toggle="tab" data-i18n="general.code") Code
+    li
+      a(href="#component-config-schema" data-toggle="tab" data-i18n="editor.level_component_config_schema") Config Schema
+    li
+      a(href="#component-settings" data-toggle="tab" data-i18n="editor.level_component_settings") Settings
+    li
+      a(href="#component-patches" data-toggle="tab" data-i18n="resources.patches")#component-patches-tab Patches
+
+  .navbar-header
+    span.navbar-brand= editTitle
+
+  ul.nav.navbar-nav.navbar-right
+    li.dropdown
+      a(data-toggle='dropdown')
+        span.glyphicon-chevron-down.glyphicon
+
+      ul.dropdown-menu
+        li.dropdown-header Actions
+        li#watch-component-button
+          a
+            span.watch
+              span.glyphicon.glyphicon-eye-open
+              span.spl Watch
+            span.unwatch.secret
+              span.glyphicon.glyphicon-eye-close
+              span.spl Unwatch
+  
+        li#patch-component-button
+          a(data-i18n="common.submit_patch") Submit Patch
+  
+        li#create-new-component-button
+          a(data-i18n="editor.level_component_btn_new") Create New Component
+        
+        li.divider
+        li.dropdown-header Info
+  
+        li#history-button
+          a(data-i18n="general.version_history") Version History
 
 .tab-content
   .tab-pane.active#component-code
