--- a/app/templates/editor/level/system/edit.jade
+++ b/app/templates/editor/level/system/edit.jade
@@ -1,21 +1,38 @@
 nav.navbar.navbar-default(role='navigation')
-  .container-fluid
-    .navbar-header
-      span.navbar-brand
-        span(data-i18n="editor.level_system_edit_title")
-          | Edit System
-        span : 
-          | "#{editTitle}"
-    .collapse.navbar-collapse
-      ul.nav.navbar-nav.nav-tabs
-        li.active
-          a(href="#system-code" data-toggle="tab") Code
-        li
-          a(href="#system-config-schema" data-toggle="tab") Config Schema
-        li
-          a(href="#system-settings" data-toggle="tab") Settings
-      ul.nav.navbar-nav.navbar-right
-        li(data-i18n="editor.level_system_btn_new").btn.btn-primary.navbar-btn#create-new-system-button Create New System
+
+  ul.nav.navbar-nav.nav-tabs
+    li.active
+      a(href="#system-code" data-toggle="tab") Code
+    li
+      a(href="#system-config-schema" data-toggle="tab") Config Schema
+    li
+      a(href="#system-settings" data-toggle="tab") Settings
+
+  ul.nav.navbar-nav.navbar-right
+    li.dropdown
+      a(data-toggle='dropdown')
+        span.glyphicon-chevron-down.glyphicon
+      ul.dropdown-menu
+        li.dropdown-header Actions
+        li#watch-component-button
+          a
+            span.watch
+              span.glyphicon.glyphicon-eye-open
+              span.spl Watch
+            span.unwatch.secret
+              span.glyphicon.glyphicon-eye-close
+              span.spl Unwatch
+        li#patch-component-button
+          a(data-i18n="common.submit_patch") Submit Patch
+        li#create-new-system
+          a(data-i18n="editor.level_system_btn_new") Create New System
+        li.divider
+        li.dropdown-header Info
+        li#system-history-button
+          a(data-i18n="general.version_history") Version History
+
+  .navbar-header
+    span.navbar-brand= editTitle
   
 .tab-content
   .tab-pane.active#system-code
