Refactored how the editor sets up its special nav through base.jade.

--- a/app/styles/editor/level/edit.sass
+++ b/app/styles/editor/level/edit.sass
@@ -1,10 +1,10 @@
 #editor-level-view
+  &, #level-editor-top-nav
+    min-width: 1024px
+  
   a
     font-family: helvetica, arial, sans serif
   
-  #top-nav
-    display: none
-    
   position: absolute
   top: 0px
   left: 0px
@@ -55,7 +55,7 @@
   .outer-content
     background-color: $BG
     position: absolute
-    top: 0
+    top: 35px
     bottom: 0
     left: 0
     right: 0
@@ -73,10 +73,10 @@
 
   #level-editor-tabs
     position: absolute
-    left: 20px
-    right: 20px
-    top: 46px
-    bottom: 20px
+    left: 15px
+    right: 15px
+    top: 15px
+    bottom: 15px
     
   .treema-root
     background-color: white
