--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -1,90 +1,90 @@
 extends /templates/base
 
-block outer_content
-  .outer-content
-    
-    if false
-      nav.navbar.navbar-default(role='navigation')#level-editor-top-nav
-        .container-fluid
-          ul.nav.navbar-nav
-            li
-              a(href="/editor/level")
-                span.glyphicon-home.glyphicon
-    
-    else
-      nav.navbar.navbar-default(role='navigation')#level-editor-top-nav
+block header
+  if false
+    nav.navbar.navbar-default(role='navigation')#level-editor-top-nav
+      .container-fluid
         ul.nav.navbar-nav
           li
             a(href="/editor/level")
               span.glyphicon-home.glyphicon
-        ul.nav.navbar-nav.nav-tabs
-        
-          li.active
-            a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
-          li
-            a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
-          li
-            a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
-          li
-            a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
-          li
-            a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
-          li
-            a(href="#editor-level-patches", data-toggle="tab")#patches-tab
-              span(data-i18n="resources.patches").spr Patches
-              - var patches = level.get('patches')
-              if patches && patches.length
-                span.badge= patches.length
-        
-        .navbar-header
-          span.navbar-brand #{level.attributes.name}
+  
+  else
+    nav.navbar.navbar-default(role='navigation')#level-editor-top-nav
+      ul.nav.navbar-nav
+        li
+          a(href="/editor/level")
+            span.glyphicon-home.glyphicon
+      ul.nav.navbar-nav.nav-tabs
+      
+        li.active
+          a(href="#editor-level-thangs-tab-view", data-toggle="tab", data-i18n="editor.level_tab_thangs") Thangs
+        li
+          a(href="#editor-level-scripts-tab-view", data-toggle="tab", data-i18n="editor.level_tab_scripts") Scripts
+        li
+          a(href="#editor-level-settings-tab-view", data-toggle="tab", data-i18n="editor.level_tab_settings") Settings
+        li
+          a(href="#editor-level-components-tab-view", data-toggle="tab", data-i18n="editor.level_tab_components") Components
+        li
+          a(href="#editor-level-systems-tab-view", data-toggle="tab", data-i18n="editor.level_tab_systems") Systems
+        li
+          a(href="#editor-level-patches", data-toggle="tab")#patches-tab
+            span(data-i18n="resources.patches").spr Patches
+            - var patches = level.get('patches')
+            if patches && patches.length
+              span.badge= patches.length
+      
+      .navbar-header
+        span.navbar-brand #{level.attributes.name}
 
-        ul.nav.navbar-nav.navbar-right
-          if authorized
-            li
-              a
-                span.glyphicon-floppy-disk.glyphicon
-          else
-            li
-              a
-                span.glyphicon-floppy-disk.glyphicon
-          
-          li(title="⌃↩ or ⌘↩: Play preview of current level")
+      ul.nav.navbar-nav.navbar-right
+        if authorized
+          li
             a
-              span.glyphicon-play.glyphicon
-          li.dropdown
-            a(data-toggle='dropdown')
-              span.glyphicon-chevron-down.glyphicon
-            ul.dropdown-menu
-              li.dropdown-header Actions
-              li#watch-button
-                a
-                  span.watch
-                    span.glyphicon.glyphicon-eye-open
-                    span.spl Watch
-                  span.unwatch.secret
-                    span.glyphicon.glyphicon-eye-close
-                    span.spl Unwatch
-                    
-              li(class=anonymous ? "disabled": "")
-                a(data-i18n="common.fork")#fork-level-start-button Fork
-              li(class=anonymous ? "disabled": "")
-                a(data-toggle="coco-modal", data-target="modal/revert", data-i18n="editor.revert")#revert-button Revert
-              li.divider
-              li.dropdown-header Info
-              li#history-button
-                a(href='#', data-i18n="general.version_history") Version History
-              li.divider
-              li.dropdown-header Help
-              li
-                a(href='https://github.com/codecombat/codecombat/wiki/Artisan-Home', data-i18n="editor.wiki", target="_blank") Wiki
-              li
-                a(href='http://www.hipchat.com/g3plnOKqa', data-i18n="editor.live_chat", target="_blank") Live Chat
-              li
-                a(href='http://discourse.codecombat.com/category/artisan', data-i18n="nav.forum", target="_blank") Forum
-              li
-                a(data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Email
+              span.glyphicon-floppy-disk.glyphicon
+        else
+          li
+            a
+              span.glyphicon-floppy-disk.glyphicon
+        
+        li(title="⌃↩ or ⌘↩: Play preview of current level")
+          a
+            span.glyphicon-play.glyphicon
+        li.dropdown
+          a(data-toggle='dropdown')
+            span.glyphicon-chevron-down.glyphicon
+          ul.dropdown-menu
+            li.dropdown-header Actions
+            li#watch-button
+              a
+                span.watch
+                  span.glyphicon.glyphicon-eye-open
+                  span.spl Watch
+                span.unwatch.secret
+                  span.glyphicon.glyphicon-eye-close
+                  span.spl Unwatch
+                  
+            li(class=anonymous ? "disabled": "")
+              a(data-i18n="common.fork")#fork-level-start-button Fork
+            li(class=anonymous ? "disabled": "")
+              a(data-toggle="coco-modal", data-target="modal/revert", data-i18n="editor.revert")#revert-button Revert
+            li.divider
+            li.dropdown-header Info
+            li#history-button
+              a(href='#', data-i18n="general.version_history") Version History
+            li.divider
+            li.dropdown-header Help
+            li
+              a(href='https://github.com/codecombat/codecombat/wiki/Artisan-Home', data-i18n="editor.wiki", target="_blank") Wiki
+            li
+              a(href='http://www.hipchat.com/g3plnOKqa', data-i18n="editor.live_chat", target="_blank") Live Chat
+            li
+              a(href='http://discourse.codecombat.com/category/artisan', data-i18n="nav.forum", target="_blank") Forum
+            li
+              a(data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Email
 
+block outer_content
+  .outer-content
     div.tab-content#level-editor-tabs
       div.tab-pane.active#editor-level-thangs-tab-view
         
