Fixed the component history button.

--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -37,7 +37,7 @@ nav.navbar.navbar-default(role='navigation')
         li.divider
         li.dropdown-header Info
   
-        li#history-button
+        li#component-history-button
           a(data-i18n="general.version_history") Version History
 
 .tab-content
