--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -70,7 +70,7 @@ block header
               a(data-toggle="coco-modal", data-target="modal/revert", data-i18n="editor.revert")#revert-button Revert
             li.divider
             li.dropdown-header Info
-            li#history-button
+            li#level-history-button
               a(href='#', data-i18n="general.version_history") Version History
             li.divider
             li.dropdown-header Help
